# s-asteroids

./: CMakeLists.txt  config.hpp.in
resources/: Asteroid1.xcf  Asteroid2.xcf  Ship.xcf
src/: main.cpp
